--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -9,7 +9,7 @@
   padding-top: 50vh; /* No padding needed as the container is fixed */
   position: relative; /* Ensure relative positioning for absolutely positioned children */
   overflow: visible; /* Ensure no overflow is hidden */
-  background-color: rgb(29, 29, 29);
+  background-color: rgb(0, 0, 0);
 }
 
 .burger-container {
@@ -82,9 +82,23 @@
   z-index: 5;
 }
 .text{
-  top:30%;
+  /* top:30%;
   left: 5%;
+  position: fixed; */
   position: fixed;
+  top: 50%;
+  left: 5%; /* Adjust left position as needed */
+  transform: translateY(-50%);
+  transition: transform 1s ease, opacity 1s ease; /* Transition for transform and opacity */
+  width: 80%; /* Adjust width as needed */
+  max-width: 800px; /* Set a max width for responsiveness */
+  text-align: left; /* Align text to the left */
+  opacity: 1; /* Start with full opacity */
+}
+
+.text.slide-out {
+  transform: translateX(-105%); /* Slide out to the left */
+  opacity: 0; /* Fade out */
 }
 
 .background.collapse {
