--- a/src/Components/News.css
+++ b/src/Components/News.css
@@ -1,5 +1,13 @@
+/* News.module.css */
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-* {
+
+.container {
+    height: 100vh;
+    width: 100vw;
+}
+
+.news * {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -8,11 +16,6 @@
     background-color: black;
     font-family: "Poppins", sans-serif;
     font-weight: 100;
-}
-
-.container {
-    height: 100vh;
-    width: 100vw;
 }
 
 .news {
@@ -51,7 +54,11 @@
     justify-content: space-between;
 }
 
-.div2-1, .div2-2, .div3-1, .div3-2, .div3-3 {
+.div2-1,
+.div2-2,
+.div3-1,
+.div3-2,
+.div3-3 {
     width: 25vw;
     height: 40vh;
     display: flex;
@@ -80,7 +87,8 @@
 }
 
 /* Flip front and back */
-.flip-card .flip-card-front, .flip-card .flip-card-back {
+.flip-card .flip-card-front,
+.flip-card .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
