--- a/src/Components/News.css
+++ b/src/Components/News.css
@@ -3,8 +3,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .container {
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
+    
 }
 
 .news * {
@@ -95,11 +96,16 @@
     backface-visibility: hidden;
     border-radius: 20px;
     color: white;
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: normal;
     padding: 20px;
     box-sizing: border-box;
     display: flex;
+}
+
+.flip-card-back{
+    font-size: 16px;
+    font-weight: normal;
 }
 
 .flip-card .flip-card-back {
